# ClusTEK

./: .gitignore  README.md  pyproject.toml  readme.txt
clustx/: pyproject.toml
clustx/src/clustx/: __init__.py  cli.py
clustx/src/clustx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
clustx/test/: test_core_smoke.py
data/: 9k.csv
docs/: usage_2d.md
examples/: run_aggregation_bo.py  run_aggregation_grid.py  run_benchmark_3d.py  run_r15_bo.py  run_r15_grid.py  run_sset1_bo.py  run_sset1_grid.py
src/clustek/: cli.py  core3d.py
